@@ -931,8 +931,24 @@ S11CS_SOUNDROM000(      "gshw_u4.l2",  CRC(e89e0116) SHA1(e96bee143d1662d078f215
                         "gshw_u20.l1", CRC(75ccbdf7) SHA1(7dce8ae427a621919caad8d8b08b06bb0adad850))
 S11_ROMEND
 
-CORE_CLONEDEF(gs,l3,l4,"Game Show (L-3)", 1990, "Bally", s11c_one,0)
+S11_ROMSTART48(gs,lu3,"gameshow_u26-lu3.rom", CRC(4fa15683) SHA1(789bac55090a54d5b5180a0ef49c3903238f407f),
+                        "gameshow_u27-lu3.rom", CRC(22270bd2) SHA1(a24a5e199179fd7c7ae8cd1b24c1d21b2fadf8da))
+S11CS_SOUNDROM000(      "gshw_u4.l2",  CRC(e89e0116) SHA1(e96bee143d1662d078f21531f405d838fdace693),
+                        "gshw_u19.l1", CRC(8bae0813) SHA1(a2b1beca13796892d8ee1533e395cabdbbb11f88),
+                        "gshw_u20.l1", CRC(75ccbdf7) SHA1(7dce8ae427a621919caad8d8b08b06bb0adad850))
+S11_ROMEND
+
+S11_ROMSTART48(gs,lg6,"gshw_u26.l3", CRC(3419bfb2) SHA1(7ce294a3118d20c7cdc3d5cd946e4c43090c5151),
+                        "u27-lg6.bin", CRC(02c75b24) SHA1(29bc0404c8598393cb1d0f17fb157e84f3b9a794))
+S11CS_SOUNDROM000(      "gshw_u4.l2",  CRC(e89e0116) SHA1(e96bee143d1662d078f21531f405d838fdace693),
+                        "gshw_u19.l1", CRC(8bae0813) SHA1(a2b1beca13796892d8ee1533e395cabdbbb11f88),
+                        "gshw_u20.l1", CRC(75ccbdf7) SHA1(7dce8ae427a621919caad8d8b08b06bb0adad850))
+S11_ROMEND
+
 CORE_GAMEDEF(gs,l4,"Game Show (L-4)", 1990, "Bally", s11c_one,0)
+CORE_CLONEDEF(gs,l3,l4,"Game Show (L-3)", 1990, "Bally", s11c_one,0)
+CORE_CLONEDEF(gs,lu3,l4,"Game Show (LU-3 Europe)", 1990, "Bally", s11c_one,0)
+CORE_CLONEDEF(gs,lg6,l4,"Game Show (LG-6 German)", 1990, "Bally", s11c_one,0)
 
 /*--------------------
 / Rollergames 5/90
